--- a/normal.css
+++ b/normal.css
@@ -11,6 +11,7 @@
  .intro_text{
     width:100%;
     margin-top: 32px;
+     margin-left: 8px;
 
     background: rgb(255, 255, 255);
     text-align: center;
